# syncman

./: CODEOWNERS  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/automerge/: mod.rs
network/: Cargo.toml
network/src/adapter/: embedded.rs  mod.rs
network/src/iroh/: mod.rs
syncman/: Cargo.toml  README.md
syncman-network/: Cargo.toml  README.md
syncman-network/src/: lib.rs
syncman-network/src/adapter/: embedded.rs  mod.rs
syncman-network/src/iroh/: mod.rs
syncman/src/: lib.rs
syncman/src/automerge/: mod.rs
